--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ staff changes.</li>
     </ul>
   </div>
   
-  div class="exp-header">
+  <div class="exp-header">
     <h3>Education</h3>
   </div>
     <h5>2013 . Le Cordon Bleu</h5>
